--- a/interactivemedia/assignment1/style.css
+++ b/interactivemedia/assignment1/style.css
@@ -2,15 +2,25 @@ body {
   font-size: 1.1rem;
   /* sourced from https://stackoverflow.com/questions/21590343/how-to-display-a-gif-fullscreen-for-a-webpage-background*/
   /* Instead of keeping this full screen I want to have it for just the title */
-  background-image: url('https://ucarecdn.com/c11586fa-d365-45ea-bc5a-68f0022923df/');
-    background-size: cover;
-    padding:0;
-    margin:0;
-    display: flex;
+  margin: 50px;
 }
 
 .titlebox{
 
+  background-color: rgba(0, 0, 0, 0.459);
+  /* BOX MODEL */
+  /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
+  background-image: url('https://ucarecdn.com/c11586fa-d365-45ea-bc5a-68f0022923df/');
+  background-size: cover;
+  padding:0;
+  margin:0;
+  width: 1000px;
+  height: 600px;
+  padding: 32px; 
+  margin: 20px;
+
+}
+.box{
   background-color: rgba(0, 0, 0, 0.459);
   /* BOX MODEL */
   /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
@@ -56,17 +66,6 @@ p {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
-}
-.blue-color {
-  color: blue;
-}
-#outcome {
-  color: yellowgreen;
-  border: 4px dashed brown;
-}
-section {
-  text-align: center;
-  border: 1px solid red;
 }
 /* not pushing why? */
 
