--- a/interactivemedia/assignment1/style.css
+++ b/interactivemedia/assignment1/style.css
@@ -4,7 +4,7 @@ body {
   /* Instead of keeping this full screen I want to have it for just the title */
   margin: 50px;
 }
-
+/* YOUTUBE TUT ON HOW TO INSERT A LINK TO A SPECIFIC PART OF THE PAGE: https://www.youtube.com/watch?v=xHFzQ8QRjGU */
 .titlebox{
 
   background-color: rgba(0, 0, 0, 0.459);
