--- a/Studio/assignment1/style.css
+++ b/Studio/assignment1/style.css
@@ -138,7 +138,7 @@ body {
 }
 
 .title-flex img {
-  width: 200px;
+  width: 400px;
   height: auto;
 }
 
@@ -169,7 +169,7 @@ body {
 .window {
   box-shadow: var(--border-window-outer), var(--border-window-inner);
   background: var(--surface);
-  padding: 0 10px;
+  padding: 5px;
   width: 800px;
   max-width: 90vw;
 }
@@ -234,8 +234,8 @@ body {
 
 .window-body {
   margin: 10px 0;
-  zoom: 1.25;
-  line-height: 1.5;
+  /* zoom: 1.25; */
+  line-height: 1.8;
   background: var(--button-highlight);
   box-shadow: var(--border-field);
   position: relative;
@@ -364,10 +364,52 @@ ul.tree-view summary:focus {
 
 .comparison-table img {
   width: 100%;
-  max-width: 220px;
+  max-width: 475px;
   height: auto;
   display: block;
   border: 1px solid #000;
   box-shadow: 2px 2px 0 #888;
   image-rendering: pixelated;
+}
+
+.centered-image {
+  display: block;
+  margin: 20px auto; 
+  max-width: 90%;
+  height: auto;
+  border: 1px solid #000;
+  box-shadow: 2px 2px 0 #888;
+  image-rendering: pixelated;
+}
+/* ------------------
+   NEXT BUTTON
+------------------ */
+.next-button {
+  display: inline-block;
+  padding: 4px 12px;
+  background: var(--button-face);
+  font-family: "Pixelated MS Sans Serif", Arial;
+  font-size: 13px;
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  user-select: none;
+  cursor: pointer;
+  border: none;
+  box-shadow:
+    inset 1px 1px var(--button-highlight),
+    inset -1px -1px var(--button-shadow),
+    inset 2px 2px var(--window-frame),
+    inset -2px -2px var(--button-face);
+    border: none;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.next-button:active {
+  box-shadow:
+    inset 1px 1px var(--button-highlight),
+    inset -1px -1px var(--button-shadow),
+    inset 2px 2px var(--button-face),
+    inset -2px -2px var(--window-frame);
 }
