--- a/interactivemedia/assignment1/style.css
+++ b/interactivemedia/assignment1/style.css
@@ -1,41 +1,3 @@
-body {
-  font-size: 1.1rem;
-  /* sourced from https://stackoverflow.com/questions/21590343/how-to-display-a-gif-fullscreen-for-a-webpage-background*/
-  /* Instead of keeping this full screen I want to have it for just the title */
-  margin: 50px;
-}
-
-.box{
-  background-color: rgba(0, 0, 0, 0.459);
-  /* BOX MODEL */
-  /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
-  width: 1000px;
-  height: 600px;
-  padding: 32px; 
-  margin: 20px;
-}
-
-/* YOUTUBE TUT ON HOW TO INSERT A LINK TO A SPECIFIC PART OF THE PAGE: https://www.youtube.com/watch?v=xHFzQ8QRjGU */
-.titlebox{
-  /* background-color: rgba(0, 0, 0, 0.459); */
-  /* BOX MODEL */
-  /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
-  background-image: url('https://ucarecdn.com/c11586fa-d365-45ea-bc5a-68f0022923df/');
-  background-size: cover;
-  padding:0;
-  margin:0;
-  width: 1000px;
-  height: 600px;
-  padding: 32px; 
-  margin: 20px;
-
-}
-.logo{
-  width: 10%;       
-  height: auto;     
-}
-
-
 h1 {
   color: white;
   font-size: 5rem;
@@ -43,7 +5,7 @@ h1 {
   text-transform: uppercase;
   font-family: "Tektur", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  /* font-weight: <weight>; */
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
@@ -54,7 +16,7 @@ h2 {
   text-transform: uppercase;
   font-family: "Tektur", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  /* font-weight: <weight>; */
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
@@ -69,13 +31,123 @@ li {
 }
 
 p {
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
   font-size: 1rem;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
-/* not pushing why? */
+
+body {
+  font-size: 1.1rem;
+  /* sourced from https://stackoverflow.com/questions/21590343/how-to-display-a-gif-fullscreen-for-a-webpage-background*/
+  /* Instead of keeping this full screen I want to have it for just the title */
+  margin: 50px;
+}
+
+.box {
+  background-color: rgba(0, 0, 0, 0.459);
+  /* BOX MODEL */
+  /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
+  width: 1000px;
+  height: 600px;
+  padding: 32px; 
+  margin: 20px;
+}
+
+
+/* YOUTUBE TUT ON HOW TO INSERT A LINK TO A SPECIFIC PART OF THE PAGE: https://www.youtube.com/watch?v=xHFzQ8QRjGU */
+.titlebox{
+  /* background-color: rgba(0, 0, 0, 0.459); */
+  /* BOX MODEL */
+  /* Source: https://www.youtube.com/watch?v=nSst4-WbEZk */
+  background-image: url('https://ucarecdn.com/c11586fa-d365-45ea-bc5a-68f0022923df/');
+  background-size: cover;
+  padding:0;
+  margin:0;
+  width: 1000px;
+  height: 600px;
+  padding: 32px; 
+  margin: 20px;
+}
+
+.logo{
+  width: 10%;       
+  height: auto;     
+}
+
+.box1 {
+  background-image: url('https://img.freepik.com/free-photo/squared-paper-texture_1154-677.jpg?semt=ais_hybrid');
+  background-size: cover;
+  padding:0;
+  margin:0;
+  width: 1000px;
+  height: 600px;
+  padding: 32px; 
+  margin: 20px;
+
+}
+
+  /* PAGE 3 */ 
+  /* via chat gpt see if i can improve later */
+
+table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  table-layout: fixed;
+}
+
+th, td {
+  border: 1px solid #ccc;
+  padding: 16px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+thead th {
+  background-color: #005577;
+  color: white;
+  font-size: 1.1em;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f1f9ff;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #ffffff;
+}
+
+td:nth-child(1)::after,
+td:nth-child(2)::after {
+  content: "→";
+  color: #888;
+  font-weight: bold;
+  padding-left: 10px;
+}
+
+td:nth-child(3)::after {
+  content: "";
+}
+
+th, td {
+  position: relative;
+}
+
+td {
+  word-wrap: break-word;
+}
+
+/* END PAGE 3 */
+
+/* source: https://www.html.am/tags/html-span-tag.cfm */
+.relative {
+font-size:1000%;color:rgb(253, 46, 18);
+/* <span style="font-size:500%;color:red;">☆</span>
+<span style="font-size:500%;color:blue;">★</span> */
+}
+
 
 /* 
     curly braces { } - grouping
