--- a/interactivemedia/assignment1/style.css
+++ b/interactivemedia/assignment1/style.css
@@ -38,6 +38,7 @@ p {
   font-style: normal;
 }
 
+/* OVERAL FORMAT */
 body {
   font-size: 1.1rem;
   /* sourced from https://stackoverflow.com/questions/21590343/how-to-display-a-gif-fullscreen-for-a-webpage-background*/
@@ -56,7 +57,7 @@ body {
 }
 
 
-/* YOUTUBE TUT ON HOW TO INSERT A LINK TO A SPECIFIC PART OF THE PAGE: https://www.youtube.com/watch?v=xHFzQ8QRjGU */
+
 .titlebox{
   /* background-color: rgba(0, 0, 0, 0.459); */
   /* BOX MODEL */
@@ -69,6 +70,7 @@ body {
   height: 600px;
   padding: 32px; 
   margin: 20px;
+   /* YOUTUBE: "TUT ON HOW TO INSERT A LINK TO A SPECIFIC PART OF THE PAGE": https://www.youtube.com/watch?v=xHFzQ8QRjGU */
 }
 
 .logo{
